--- a/smartcontract-analyzer/package.json
+++ b/smartcontract-analyzer/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@dqbd/tiktoken": "^1.0.7",
+    "@openzeppelin/contracts": "^5.0.0",
     "axios": "^1.5.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -17,6 +19,8 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
-    "openai": "^4.12.4"
+    "openai": "^4.13.0",
+    "path": "^0.12.7",
+    "solc": "^0.8.18"
   }
 }
