--- a/smartcontract-analyzer/package.json
+++ b/smartcontract-analyzer/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "NODE_ENV=dev nodemon app.js",
+    "prod": "NODE_ENV=prod node app.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,8 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
-    "openai": "^4.12.4"
+    "nodemon": "^3.0.1",
+    "openai": "^4.12.4",
+    "winston": "^3.11.0"
   }
 }
