--- a/smartcontract-analyzer/.env.docker
+++ b/smartcontract-analyzer/.env.docker
@@ -1,4 +1,4 @@
-OPENAI_API_KEY="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"
+OPENAI_API_KEY="key"
 PORT=3000
 TEMP_FILE_NAME="temp.txt"
 UPLOAD_PATH=uploads/
