--- a/smartcontract-analyzer/.env.docker
+++ b/smartcontract-analyzer/.env.docker
@@ -1,4 +1,4 @@
-OPENAI_API_KEY="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"
+OPENAI_API_KEY="your api key"
 PORT=3000
 TEMP_FILE_NAME="temp.txt"
 UPLOAD_PATH=uploads/
